# VSE-vocal

./: CMakeLists.txt  README.md  config.json  main.py  pyrightconfig.json  pytest.ini  requirements.txt  setup_juce_plugin_structure.bat  setup_juce_plugin_structure.sh  tempconfig.json  test_runtime_requirements.py  user_evaluation_plan.md  vose_core.cpp  vose_core_internal.h  vose_pro.spec
.github/workflows/: build-engine.yml  build-plugin.yml  release.yml
include/: AutomationCurves.h  AutomationPoint.h  GraphEditorComponent.h  OtoDatabase.h  PianoRollBridge.h  PianoRollComponent.h  PianoRollNote.h  PitchCurveBuilder.h  PluginEditor.h  PluginProcessor.h  Plugineditor.h  RenderEngine.h  StreamingVoice.h  TextEncoding.h  TrackMixerComponent.h  UstFlags.h  UstParser.h  UstProject.h  UstWriter.h  VoiceGalleryComponent.h  VoiceInfo.h  VoiceScanner.h  VoiceTrack.h  VoseBridge.h  VoseColourIds.h  VoseLookAndFeel.h  VowelClassifier.h  vose_core.h  vose_streaming.h
juce_plugin/: CMakeLists.txt
modules/: ai_manager.py  log.py  main_window.py  pack_all_voices.py  pipeline_bridge.py  text_analyzer.py  vose_api.py
modules/audio/: audio_output.py  vcv_resolver.py  vo_se_engine.py  vo_se_engine_patch.py  voice_manager.py
modules/backend/: audio_player.py  intonation.py  workers.py
modules/data/: data_models.py  licensing.py  midi_manager.py  oto_parser.py  text_analyzer.py  ust_parser.py
modules/ffi/: __init__.py  vose_types.py
modules/gui/: _mixin_base.py  app_main.py  audio_mixin.py  aural_engine.py  core_manager.py  dynamics_engine.py  effects_panel.py  graph_editor_widget.py  keyboard_sidebar_widget.py  layout_manager.py  main_window.py  main_window_patch.py  settings_dialog.py  shared.py  themes.py  timeline_widget.py  voice_mixin.py  widgets.py
modules/gui/mixins/: audio_mixin.py  project_io_mixin.py  voice_management_mixin.py
modules/talk/: talk_manager.py
modules/tools/: batch_voice_optimizer.py  pack_all_voices.py
modules/updater/: update_checker.py
modules/utils/: config_handler.py  initializer.py  zip_handler.py
plans/: user_evaluation_plan.md
scripts/: build_linux_engine.sh
src/: GraphEditorComponent.cpp  PianoRollComponent.cpp  PluginProcessor.cpp  voice_data.h  vose_core.cpp  vose_streaming_final.cpp
tests/: conftest.py  test_ci_render.py  test_engine_bridge.py  test_linux_engine_build.py  test_oto_parser.py  test_smoke.py  test_timeline_widget.py  test_ust_parser.py
themes/: dark.qss  light.qss
